<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.baloise.azure</groupId>
	<artifactId>functional-org-baloise</artifactId>
	<version>1.0-SNAPSHOT</version>
	<packaging>jar</packaging>

	<name>Baloise Functional Organisation API</name>

	<organization>
		<name>Baloise</name>
		<url>https://github.com/baloise/</url>
	</organization>

	<licenses>
		<license>
			<name>Apache-2.0</name>
			<url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
			<comments>A business-friendly OSS license</comments>
		</license>
	</licenses>

	<issueManagement>
		<system>Github</system>
		<url>https://github.com/baloise/functional-org-baloise/issues</url>
	</issueManagement>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<java.version>17</java.version>
		<azure.functions.maven.plugin.version>1.27.0</azure.functions.maven.plugin.version>
		<azure.functions.java.library.version>3.0.0</azure.functions.java.library.version>
		<functionAppName>functional-org-baloise</functionAppName>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.junit</groupId>
				<artifactId>junit-bom</artifactId>
				<version>5.10.1</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>


	<dependencies>
		<dependency>
			<groupId>com.microsoft.graph</groupId>
			<artifactId>microsoft-graph</artifactId>
			<version>5.77.0</version>
		</dependency>
		<dependency>
			<groupId>com.microsoft.azure.functions</groupId>
			<artifactId>azure-functions-java-library</artifactId>
			<version>${azure.functions.java.library.version}</version>
		</dependency>
		<dependency>
			<groupId>com.microsoft.azure</groupId>
			<artifactId>msal4j</artifactId>
			<version>1.14.1</version>
		</dependency>
		<dependency>
			<groupId>com.azure</groupId>
			<artifactId>azure-security-keyvault-secrets</artifactId>
			<version>4.7.3</version>
		</dependency>
		<dependency>
			<groupId>com.azure</groupId>
			<artifactId>azure-identity</artifactId>
			<version>1.11.1</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>2.16.1</version>
		</dependency>
		<!-- Test -->
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>2.23.4</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
					<encoding>${project.build.sourceEncoding}</encoding>
				</configuration>
			</plugin>
			<plugin>
				<groupId>com.microsoft.azure</groupId>
				<artifactId>azure-functions-maven-plugin</artifactId>
				<version>${azure.functions.maven.plugin.version}</version>
				<configuration>
					<!-- function app name -->
					<appName>${functionAppName}</appName>
					<!-- function app resource group -->
					<resourceGroup>deop-rg-prod-euw-git-ps-funorg</resourceGroup>
					<!-- function app region-->
					<!-- refers
					https://github.com/microsoft/azure-maven-plugins/wiki/Azure-Functions:-Configuration-Details#supported-regions
					for all valid values -->
					<region>westeurope</region>
					<!-- function pricingTier, default to be consumption if not
					specified -->
					<!-- refers
					https://github.com/microsoft/azure-maven-plugins/wiki/Azure-Functions:-Configuration-Details#supported-pricing-tiers
					for all valid values -->
					<!-- <pricingTier></pricingTier> -->
					<!-- Whether to disable application insights, default is
					false -->
					<!-- refers
					https://github.com/microsoft/azure-maven-plugins/wiki/Azure-Functions:-Configuration-Details
					for all valid configurations for application insights-->
					<disableAppInsights>true</disableAppInsights>
					<runtime>
						<!-- runtime os, could be windows, linux or docker-->
						<os>linux</os>
						<javaVersion>17</javaVersion>
					</runtime>
					<appSettings>
						<property>
							<name>FUNCTIONS_EXTENSION_VERSION</name>
							<value>~4</value>
						</property>
					</appSettings>
				</configuration>
				<executions>
					<execution>
						<id>package-functions</id>
						<goals>
							<goal>package</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.2.1</version>
			</plugin>
			<!--Remove obj folder generated by .NET SDK in maven clean-->
			<plugin>
				<artifactId>maven-clean-plugin</artifactId>
				<version>3.1.0</version>
				<configuration>
					<filesets>
						<fileset>
							<directory>obj</directory>
						</fileset>
					</filesets>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
